# dotfiles

./: .bash_aliases  .bash_profile  .bashrc  .editorconfig  .gitconfig  .gitignore  .gitmodules  .tmux.conf  .vimrc  .zshrc  LICENSE  README.txt  install.zsh  installed_packages  sync-env.template  vimopts.md
.bin/: playing.sh
.bin/tmux/: available_memory.sh  available_memory.zsh  check_vpn.sh  check_vpn.zsh  cpu_cores.sh  load_average.sh  playing.sh  toggle_music.sh  toggle_music.zsh
.config/: Trolltech.conf  mimeapps.list
.config/caja/: accels  desktop-metadata
.config/configstore/: update-notifier-npm.json
.config/dconf/: user
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: bookmarks
.config/menus/: mate-applications-merged  mate-applications.menu
.git_template/hooks/: ctags
.vim/: .netrwhist
.zsh/: cache  lib  templates
.zsh/plugins/: colored-man-pages  command-not-found  composer  node  ssh-agent  systemd  tmux  vi-mode
browsing/: adblock_lists.txt
dot/: Xresources  bash_aliases  bash_profile  bashrc  gitconfig  i3status.conf  p10k.zsh  tmux.conf  vimrc  xsession  zshrc
dot/i3/: config  (+2 more)
dot/xmonad/: .gitignore  build  hie.yaml  xmobarrc  xmonad-shso.cabal  xmonad-shso.hs  xmonad.hs
dot/xmonad/lib/My/: Hooks.hs  Keys.hs  Layouts.hs  Pass.hs  StatusBar.hs
dot/xmonad/resources/: arch-linux-icon_24.xpm
dot/xmonad/xmobar/: mainBottom  mainTop
dotconfig/: picom.conf
remotes/: .bash_aliases  .bashrc  .tmux.conf  .vimrc  commandall.template  commandall_completion.zsh.template  sync-env.template
templates/: NewZshTemplate.zsh
(+225 files in other folders)
