cabal-version:      3.0
name:               xmonad-shso
version:            0.1.0.0
license:            BSD-3-Clause
author:             Shahin Sorkh
maintainer:         sorkh.shahin@hotmail.com

library my-internal
  build-depends:
    , base
    , xmonad
    , xmonad-contrib
    , xmobar
    , X11
    , containers
    , filepath
    , directory
  hs-source-dirs: lib
  exposed-modules:
    My.Hooks My.Keys My.Layouts My.StatusBar My.Pass
  default-language: Haskell2010

executable xmonad-shso
  main-is:          xmonad-shso.hs
  build-depends:
    , base
    , xmonad
    , xmonad-contrib
    , xmobar
    , X11
    , my-internal
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
